--- a/package.json
+++ b/package.json
@@ -9,15 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@prisma/client": "^5.7.1",
     "classnames": "^2.5.1",
     "next": "14.0.4",
     "prisma": "^5.7.1",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^4.12.0"
+    "react-icons": "^4.12.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@prisma/client": "^5.7.1",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
