--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@next-auth/prisma-adapter": "^1.0.7",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/themes": "^2.0.3",
+    "@sentry/nextjs": "^7.98.0",
     "axios": "^1.6.5",
     "classnames": "^2.5.1",
     "delay": "^6.0.0",
